# Pineapple

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  appveyor.win64.yml  appveyor.yml  license.txt
Assets/Pineapple/Shaders/: pass.vert  quad.frag  quad.vert
Demo/AnimatedSprite/: AnimatedSprite.cpp  CMakeLists.txt
Demo/CatchTheClown/: CMakeLists.txt  CatchTheClown.cpp
Demo/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
Demo/Simple/: CMakeLists.txt  Simple.cpp
Demo/SpaceRocks/: Bullet.cpp  Bullet.h  CMakeLists.txt  Level.cpp  Level.h  Main.cpp  Player.cpp  Player.h  Resource.cpp  Resource.h  Rock.cpp  Rock.h  Warp.cpp  Warp.h
Demo/Text/: CMakeLists.txt  Text.cpp  pineapple.json
Docs/Engine/: doc_AABB.md  doc_Asset.md  doc_Background.md  doc_Bitfield.md  doc_Colour.md  doc_Counter.md  doc_Dependency.md  doc_DynamicPool.md  doc_Effect.md  doc_EnableChildList.md  doc_Entity.md  doc_Event.md  doc_Fade.md  doc_FileSystem.md  doc_Flash.md  doc_Font.md  doc_Format.md  doc_Graphics.md  doc_IndexBuffer.md  doc_Input.md  doc_InputHandler.md  doc_List.md  doc_ListView.md  doc_Log.md  doc_Macro.md  doc_Map.md  doc_Memory.md  doc_Music.md  doc_Object.md  doc_ObjectInfo.md  doc_ObjectStore.md  doc_Obscure.md  doc_Particle.md  doc_Platform.md  doc_PlatformSettings.md  doc_Pointer.md  doc_Pool.md  doc_Program.md  doc_Rect.md  doc_Render.md  (+22 more)
Ext/: fontstash.h  gl3fontstash.h  glfontstash.h
Ext/glad/OpenGL4.1/include/glad/: glad.h
Ext/glad/OpenGL4.1/src/: glad.c
Script/: clean.py  common.py  generateDocs.py  header.txt
Source/Pineapple/: Pineapple.h
Source/Pineapple/Engine/: CMakeLists.txt
Source/Pineapple/Engine/Container/: Bitfield.h  Bitfield.inl  DynamicPool.cpp  DynamicPool.h  DynamicPool.inl  IndexBuffer.h  IndexBuffer.inl  List.h  List.inl  ListView.h  ListView.inl  Pool.cpp  Pool.h  Pool.inl  Rect.h  TaggedPtr.h  Vect2.h
Source/Pineapple/Engine/Graphics/: AnimatedSprite.cpp  AnimatedSprite.h  AnimatedSprite.inl  Colour.h  Font.cpp  Font.h  Graphics.cpp  Graphics.h  Graphics.inl  Map.cpp  Map.h  Program.cpp  Program.h  Program.inl  Render.cpp  Render.h  RenderSystem.cpp  RenderSystem.h  Shader.cpp  Shader.h  Shader.inl  Sprite.cpp  Sprite.h  SpriteAttributes.cpp  SpriteAttributes.h  Text.cpp  Text.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  Tile.h  TileMap.cpp  TileMap.h  TileMap.inl  TileSet.cpp  TileSet.h
Source/Pineapple/Engine/Physics/: AABB.cpp  AABB.h  Particle.cpp  Particle.h
Source/Pineapple/Engine/Platform/: Dependency.cpp  Dependency.h  Event.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  Log.cpp  Log.h  Memory.cpp  Memory.h  Platform.cpp  Platform.h  PlatformSettings.cpp  PlatformSettings.h  Pointer.h  Pointer.inl  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourceState.h  StringResource.cpp  StringResource.h
Source/Pineapple/Engine/Prefab/Asset/: Asset.cpp  Asset.h
Source/Pineapple/Engine/Prefab/Game/: Entity.cpp  Entity.h
Source/Pineapple/Engine/Prefab/UI/: Background.cpp  Background.h  Fade.cpp  Fade.h  Flash.cpp  Flash.h
Source/Pineapple/Engine/Sound/: Effect.cpp  Effect.h  Music.cpp  Music.h  Sound.cpp  Sound.h
Source/Pineapple/Engine/System/: Counter.cpp  Counter.h  EnableChildList.h  Input.h  InputHandler.cpp  InputHandler.h  Object.cpp  Object.h  Object.inl  ObjectInfo.h  ObjectInfo.inl  ObjectStore.cpp  ObjectStore.h  ObjectStore.inl  Time.h  Timer.h  TimerHandler.cpp  TimerHandler.h  TimerHandler.inl  World.cpp  World.h  World.inl
Source/Pineapple/Engine/Util/: Format.h  Macro.h  Obscure.h  Obscure.inl
Source/Pineapple/Graphics/OpenGL/: CMakeLists.txt  DrawGL.cpp  DrawGL.h  FontGL.cpp  FontGL.h  GraphicsGL.cpp  GraphicsGL.h  ImageGL.cpp  ImageGL.h  IncludeGL.h  MapGL.cpp  MapGL.h  ProgramGL.cpp  ProgramGL.h  ShaderGL.cpp  ShaderGL.h  SpriteGL.cpp  SpriteGL.h  TextGL.cpp  TextGL.h  TextureCoordsGL.cpp  TextureCoordsGL.h  TextureFileGL.cpp  TextureFileGL.h  TextureGL.cpp  TextureGL.h  TextureSubGL.cpp  TextureSubGL.h  TileSetGL.cpp  TileSetGL.h  UtilGL.cpp  UtilGL.h  VertexBuffer2DGL.cpp  VertexBuffer2DGL.h
Source/Pineapple/Platform/Android/: AndroidArguments.h  AndroidBridge.cpp  AndroidBridge.h  AndroidEngine.cpp  AndroidEngine.h  AndroidFileSystem.cpp  AndroidFileSystem.h  AndroidJNI.cpp  AndroidJNI.h  AndroidPlatform.cpp  AndroidPlatform.h  AndroidUtil.cpp  AndroidUtil.h  CMakeLists.txt  ScopedEnvJNI.cpp  ScopedEnvJNI.h
Source/Pineapple/Platform/Android/java/com/pineapple/: paNativeActivity.java
Source/Pineapple/Platform/Android/java/com/pineapple/util/: paUtil.java
Source/Pineapple/Platform/IOS/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  IOS-Prefix.pch  IOS.h  IOS.mm  IOSBridge.h  IOSBridge.mm  IOSFile.mm  IOSFileSystem.mm  IOSPlatform.h  IOSPlatform.mm  ThreadSignal.h  ThreadSignal.inl  ViewController.h  ViewController.mm
Source/Pineapple/Platform/Windows/: CMakeLists.txt  WindowsArguments.h  WindowsFile.cpp  WindowsKey.cpp  WindowsKey.h  WindowsPlatform.cpp  WindowsPlatform.h
Source/Pineapple/Platform/X11/: CMakeLists.txt  X11File.cpp  X11Key.cpp  X11Key.h  X11Platform.cpp  X11Platform.h
Source/Pineapple/Sound/FMOD/: CMakeLists.txt  EffectFMOD.cpp  EffectFMOD.h  MusicFMOD.cpp  MusicFMOD.h  SoundFMOD.cpp  SoundFMOD.h  UtilFMOD.cpp  UtilFMOD.h
Source/Pineapple/Sound/SoundPool/: BindingEffectSP.h  BindingMusicSP.h  CMakeLists.txt  EffectSP.cpp  EffectSP.h  MusicSP.cpp  MusicSP.h  SoundSP.cpp  SoundSP.h
Source/Pineapple/Sound/SoundPool/java/com/pineapple/sound/: paMediaPlayer.java  paSoundPool.java  paSoundPoolOnLoadCompleteListener.java
Test/Engine/: BitfieldTest.cpp  CMakeLists.txt  EngineStressTest.cpp  IndexBufferTest.cpp  ListTest.cpp  ObjectStoreTest.cpp  ObscureTest.cpp  PoolTest.cpp  RenderSystemTest.cpp  TimerTest.cpp  WorldTest.cpp
